# lite-fibonacci-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
lite_fibonacci_gen/: __init__.py  core.py
tests/: test_lite_fibonacci_gen.py
